MULE-7367: Backport of build files update to 3.3.x Created profiles for ci stages. All modules are included in the reactor. They may be skipped via properties or profiles. License check is strict now. Each ci profile defines its own setup (no need to add external definitions).
(cherry picked from commit 2e77c88106e6981749a3da58ccab6f19b67757cb)